@@ -1,3 +1,6 @@
+2011-03-27:
+ - Improved performance of parsing files which contain include files
+
 2011-03-26:
  - Inspection to detect array use of simple variables
  - Inspection to detect simple use of array variables
